--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,3 +1,11 @@
 {
-  "vimMode": true
+  "vimMode": true,
+  "pdfExportSettings": {
+    "includeName": true,
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  },
+  "alwaysUpdateLinks": true
 }
